client/public/global.css
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	-webkit-padding: 0.4em 0;
	padding: 0.4em;
	margin: 0 0 0.5em 0;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 2px;
}

@font-face {
  font-family: 'Saira Stencil One';
  font-style: normal;
  font-weight: 400;
  src: url('./fonts/saira-stencil-one-v12-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('./fonts/saira-stencil-one-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('./fonts/saira-stencil-one-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('./fonts/saira-stencil-one-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('./fonts/saira-stencil-one-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('./fonts/saira-stencil-one-v12-latin-regular.svg#SairaStencilOne') format('svg'); /* Legacy iOS */
}

@font-face {
  font-family: 'Stick No Bills';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/stick-no-bills-v6-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../fonts/stick-no-bills-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/stick-no-bills-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/stick-no-bills-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/stick-no-bills-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/stick-no-bills-v6-latin-regular.svg#StickNoBills') format('svg'); /* Legacy iOS */
}

body {
	margin: 0;
	padding:0;
	box-sizing: border-box;
	font-family: 'Roboto Condensed', 'Saira Stencil One';
}

